browser/base/content/browser.css
@namespace html url("http://www.w3.org/1999/xhtml");

:root,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  overflow: -moz-hidden-unscrollable;
}

:root {
  text-rendering: optimizeLegibility;
  min-height: 95px;
  min-width: 95px;

  
  --panelui-subview-transition-duration: 150ms;
  --lwt-additional-images: none;
  --lwt-background-alignment: right top;
  --lwt-background-tiling: no-repeat;

  --toolbar-bgcolor: var(--toolbar-non-lwt-bgcolor);
  --toolbar-bgimage: var(--toolbar-non-lwt-bgimage);
  --toolbar-color: var(--toolbar-non-lwt-textcolor);
}

:root:-moz-locale-dir(rtl) {
  direction: rtl;
}

:root:-moz-lwtheme {
  --toolbar-bgcolor: rgba(255,255,255,.4);
  --toolbar-bgimage: none;
  --toolbar-color: var(--lwt-text-color, inherit);

  background-color: var(--lwt-accent-color);
  color: var(--lwt-text-color);
}

:root:-moz-lwtheme[lwtheme-image] {
  background-image: var(--lwt-header-image) !important;
  background-repeat: no-repeat;
  background-position: right top !important;
}

:root:-moz-lwtheme:-moz-window-inactive {
  background-color: var(--lwt-accent-color-inactive, var(--lwt-accent-color));
}

:root:not([chromehidden~="toolbar"]) {
  min-width: 450px;
}

:root[customizing] {
  min-width: -moz-fit-content;
}


.browserStack > browser {
  min-height: 25px;
  min-width: 25px;
}

body {
  display: -moz-box;
  -moz-box-orient: vertical;
  -moz-box-flex: 1;
}



#navigator-toolbox:-moz-lwtheme {
  background-image: var(--lwt-additional-images);
  background-position: var(--lwt-background-alignment);
  background-repeat: var(--lwt-background-tiling);
}

.search-one-offs[compact=true] .search-setting-button,
.search-one-offs:not([compact=true]) .search-setting-button-compact {
  display: none;
}

%ifdef MENUBAR_CAN_AUTOHIDE
#toolbar-menubar[autohide="true"] {
  overflow: hidden;
}

#toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) {
  min-height: 0 !important;
  height: 0 !important;
  appearance: none !important;
}
%endif

%ifdef XP_MACOSX
#toolbar-menubar {
  visibility: collapse;
}
%endif

panelmultiview {
  -moz-box-align: start;
}

panelmultiview[transitioning] {
  pointer-events: none;
}

panelview {
  -moz-box-orient: vertical;
}

panelview:not([visible]) {
  visibility: collapse;
}


panelview[mainview] > .panel-header {
  display: none;
}

.panel-viewcontainer {
  overflow: hidden;
}

.panel-viewcontainer[panelopen] {
  transition-property: height;
  transition-timing-function: var(--animation-easing-function);
  transition-duration: var(--panelui-subview-transition-duration);
  will-change: height;
}

.panel-viewcontainer.offscreen {
  display: block;
}

.panel-viewstack {
  overflow: visible;
  transition: height var(--panelui-subview-transition-duration);
}

@supports -moz-bool-pref("layout.css.emulate-moz-box-with-flex") {
  #tabbrowser-tabs {
    
    width: 0;
  }
  .tab-stack {
    
    vertical-align: top;
  }
}

@supports not -moz-bool-pref("browser.tabs.tabmanager.enabled") {
  #tabbrowser-tabs:not([overflow="true"]):not([hashiddentabs]) ~ #alltabs-button {
    display: none;
  }
  #tabbrowser-tabs:not([overflow="true"])[using-closing-tabs-spacer] ~ #alltabs-button {
    
    display: -moz-box;
    visibility: hidden;
  }
}

#tabbrowser-tabs[hasadjacentnewtabbutton]:not([overflow="true"]) ~ #new-tab-button,
#tabbrowser-tabs[overflow="true"] > #tabbrowser-arrowscrollbox > #tabs-newtab-button,
#tabbrowser-tabs:not([hasadjacentnewtabbutton]) > #tabbrowser-arrowscrollbox > #tabs-newtab-button,
#TabsToolbar[customizing="true"] #tabs-newtab-button {
  display: none;
}

.tabbrowser-tab:not([pinned]) {
  -moz-box-flex: 100;
  max-width: 225px;
  min-width: var(--tab-min-width);
  width: 0;
  transition: min-width 100ms ease-out,
              max-width 100ms ease-out;
}

:root[uidensity=touch] .tabbrowser-tab:not([pinned]) {
  
  min-width: calc(var(--tab-min-width) + 10px);
}

.tabbrowser-tab:not([pinned]):not([fadein]) {
  max-width: 0.1px;
  min-width: 0.1px;
  visibility: hidden;
}

.tab-icon-image[fadein],
.tab-close-button[fadein],
.tabbrowser-tab[fadein]::after,
.tab-background[fadein] {
  
  transition: visibility 0ms 25ms;
}

.tab-icon-pending:not([fadein]),
.tab-icon-image:not([fadein]),
.tab-close-button:not([fadein]),
.tabbrowser-tab:not([fadein])::after,
.tab-background:not([fadein]) {
  visibility: hidden;
}

.tab-label:not([fadein]),
.tab-throbber:not([fadein]) {
  display: none;
}

%ifdef NIGHTLY_BUILD
@supports -moz-bool-pref("browser.tabs.hideThrobber") {
  .tab-throbber {
    display: none !important;
  }
}
%endif

#tabbrowser-tabs[positionpinnedtabs] > #tabbrowser-arrowscrollbox > .tabbrowser-tab[pinned] {
  position: fixed !important;
  display: block;
}

#tabbrowser-tabs[movingtab] > #tabbrowser-arrowscrollbox > .tabbrowser-tab[selected],
#tabbrowser-tabs[movingtab] > #tabbrowser-arrowscrollbox > .tabbrowser-tab[multiselected] {
  position: relative;
  z-index: 2;
  pointer-events: none; 
}

.tabbrowser-tab[tab-grouping],
.tabbrowser-tab[tabdrop-samewindow] {
  transition: transform 200ms var(--animation-easing-function);
}

.tabbrowser-tab[tab-grouping][multiselected]:not([selected]) {
  z-index: 2;
}


#tabbrowser-tabs[movingtab] {
  padding-bottom: 15px;
  margin-bottom: -15px;
}

#navigator-toolbox[movingtab] > #nav-bar {
  pointer-events: none;
}


#navigator-toolbox[movingtab] > #nav-bar > #nav-bar-customization-target > #personal-bookmarks,
#navigator-toolbox[movingtab] > #nav-bar > #nav-bar-customization-target > #home-button,
#navigator-toolbox[movingtab] > #nav-bar > #nav-bar-customization-target > #downloads-button,
#navigator-toolbox[movingtab] > #nav-bar > #nav-bar-customization-target > #bookmarks-menu-button {
  pointer-events: auto;
}




#nav-bar:not([urlbar-exceeds-toolbar-bounds]),



toolbar[overflowable][customizing] > .customization-target {
  overflow: -moz-hidden-unscrollable;
}
/* ... */

