Bug 1531609 part 1 - Rename overflow:-moz-hidden-unscrollable to overflow:clip.  r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D73716

UltraBlame original commit: cf1609de88420fe724b18d0d6aa8f29d2598730a

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -10,7 +10,7 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
-  overflow: -moz-hidden-unscrollable;
+  overflow: clip;
 }
 
 :root {
@@ -269,7 +269,7 @@ panelview[mainview] > .panel-header {
 
 
 toolbar[overflowable][customizing] > .customization-target {
-  overflow: -moz-hidden-unscrollable;
+  overflow: clip;
 }
 
 toolbar:not([overflowing]) > .overflow-button,
